test/corpus/classes.txt
==================
Empty class
==================

class X : Object {}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body)))

==================
Class with var, component, function, event
==================

class Pickup : Actor {
  var Health: int = 100
  component Root: SceneComponent
  function Heal(amount: int) {}
  event BeginPlay() {}
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (variable_decl
        name: (identifier)
        type: (type_ref base: (identifier))
        default: (integer_literal))
      (component_decl
        name: (identifier)
        type: (type_ref base: (identifier)))
      (function_decl
        name: (identifier)
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        body: (block))
      (event_decl
        name: (identifier)
        body: (block)))))

==================
Replicated class with RepNotify var
==================

class T : Actor {
  defaults {
    bReplicates = true
  }

  @replicated(repnotify = OnRep_Foo)
  var Foo: int = 0

  function OnRep_Foo() {}
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (defaults_block
        (class_assignment
          name: (identifier)
          value: (bool_literal)))
      (variable_decl
        (decorator
          name: (identifier)
          (decorator_arg name: (identifier) value: (identifier)))
        name: (identifier)
        type: (type_ref base: (identifier))
        default: (integer_literal))
      (function_decl
        name: (identifier)
        body: (block)))))

==================
Class with defaults block
==================

class T : Actor {
  defaults {
    bAlwaysRelevant = true
    PrimaryActorTick.bStartWithTickEnabled = false
  }
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (defaults_block
        (class_assignment
          name: (identifier)
          value: (bool_literal))
        (class_assignment
          name: (identifier)
          name: (identifier)
          value: (bool_literal))))))

==================
Class with settings block
==================

class T : Actor {
  settings {
    BlueprintDisplayName = "Cool"
    bGenerateAbstractClass = true
    bRunConstructionScriptOnDrag = false
  }
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (settings_block
        (class_assignment
          name: (identifier)
          value: (string_literal))
        (class_assignment
          name: (identifier)
          value: (bool_literal))
        (class_assignment
          name: (identifier)
          value: (bool_literal))))))

==================
Class with qualified parent, interface, and var type
==================

class BP_PC : PlayerController@/Game/Foo/BP_PC implements BPI_X@/Game/Foo/BPI_X, BPI_Y {
  var DroneRef: BP_Drone@/Game/StackOBot/Blueprints/Character/BP_Drone
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    parent_qualified_path: (qualified_path
      (identifier)
      (identifier)
      (identifier))
    interface: (identifier)
    interface_qualified_path: (qualified_path
      (identifier)
      (identifier)
      (identifier))
    interface: (identifier)
    body: (class_body
      (variable_decl
        name: (identifier)
        type: (type_ref
          base: (identifier)
          qualified_path: (qualified_path
            (identifier)
            (identifier)
            (identifier)
            (identifier)
            (identifier)))))))

==================
Function with ref / const / out parameter modifiers
==================

class X : Actor {
  function ComputeBounds(Seed: int, ref Acc: float, const Src: Object, out Min: Vector, out Max: Vector): bool {}
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (function_decl
        name: (identifier)
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        return_type: (type_ref base: (identifier))
        body: (block)))))

==================
Timeline with settings, tracks, and handlers
==================

class BP_Coin : Actor {
  timeline ShowPickup {
    Length = 0.5
    track Coin: float = asset("/Game/Curves/CV_Coin.CV_Coin")
    track Pulse
    event Update(Coin: float) {}
    event Finished() {}
  }
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (timeline_decl
        name: (identifier)
        (timeline_setting
          name: (identifier)
          value: (float_literal))
        (track_decl
          name: (identifier)
          type: (type_ref base: (identifier))
          source: (asset_expression
            path: (string_literal)))
        (track_decl
          name: (identifier))
        (event_decl
          name: (identifier)
          (parameter
            name: (identifier)
            type: (type_ref base: (identifier)))
          body: (block))
        (event_decl
          name: (identifier)
          body: (block))))))

==================
Timeline track name with space (quoted carrier)
==================

class BP_Battery : Actor {
  timeline Movement {
    track "Movement lerp": float
    event Update(Movementlerp: float) {}
  }
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (timeline_decl
        name: (identifier)
        (track_decl
          name: (string_literal)
          type: (type_ref base: (identifier)))
        (event_decl
          name: (identifier)
          (parameter
            name: (identifier)
            type: (type_ref base: (identifier)))
          body: (block))))))

==================
Pure macro with return
==================

class X : Actor {
  pure macro Identity(x: int): int {
    return x
  }
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (macro_decl
        name: (identifier)
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        return_type: (type_ref base: (identifier))
        body: (block
          (return_statement value: (identifier)))))))

==================
Macro with In: Exec and out execs (route calls in body)
==================

class X : Actor {
  macro CheckPlayer(In: Exec, c: Controller, out Success: Exec, out Fail: Exec) {
    In() {
      if (c == none) { Fail() } else { Success() }
    }
  }
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (macro_decl
        name: (identifier)
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        body: (macro_input_body_list
          (macro_input_body_block
            name: (identifier)
            body: (block
              (if_statement
                condition: (binary_expression
                  left: (identifier)
                  right: (none_literal))
                then: (block
                  (expression_statement
                    (call_expression callee: (identifier))))
                else: (block
                  (expression_statement
                    (call_expression callee: (identifier))))))))))))

==================
Macro with @display-decorated out exec param
==================

class X : Actor {
  macro M(In: Exec, @display("Has Match") out HasMatch: Exec, out NoMatch: Exec) {
    In() {
      HasMatch()
    }
  }
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (macro_decl
        name: (identifier)
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          (decorator
            name: (identifier)
            (decorator_arg value: (string_literal)))
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        body: (macro_input_body_list
          (macro_input_body_block
            name: (identifier)
            body: (block
              (expression_statement
                (call_expression callee: (identifier))))))))))

==================
Macro with multi-input bodies
==================

class X : Actor {
  macro Toggle(On: Exec, Off: Exec) {
    On() {}
    Off() {}
  }
}

---

(source_file
  (class_declaration
    name: (identifier)
    parent: (identifier)
    body: (class_body
      (macro_decl
        name: (identifier)
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        (parameter
          name: (identifier)
          type: (type_ref base: (identifier)))
        body: (macro_input_body_list
          (macro_input_body_block name: (identifier) body: (block))
          (macro_input_body_block name: (identifier) body: (block)))))))
